fix(users tab): fixed role select not fitting width

--- a/src/global.less
+++ b/src/global.less
@@ -221,6 +221,7 @@ ol {
     width: 100vw;
     margin: 0;
     top: 0;
+    overflow-y: auto;
   }
   .ant-modal-body {
     height: calc(100vh - 110px);
